<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    android:gravity="top">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/search_auto_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/search_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_city_hint"
            android:layout_marginBottom="@dimen/five_dips"
            android:lines="1"
            android:singleLine="true"
            android:ellipsize="end" />

    </android.support.design.widget.TextInputLayout>

    <TableLayout
        android:id="@+id/search_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_auto_cover"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">

        <android.support.v7.widget.AppCompatTextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_city" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/ten_dips" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_province" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/ten_dips" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_district" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/ten_dips" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_community" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/ten_dips" />

    </TableLayout>

</RelativeLayout>