<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/three_dips"
    android:paddingBottom="@dimen/three_dips">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TimeTable.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timetable_start_title" />

        <TextView
            style="@style/TimeTable.Text"
            android:id="@+id/tt_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TimeTable.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timetable_destination_title" />

        <TextView
            style="@style/TimeTable.Text"
            android:id="@+id/tt_destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TimeTable.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timetable_length_title" />

        <TextView
            style="@style/TimeTable.Text"
            android:id="@+id/tt_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TimeTable.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timetable_price_title" />

        <TextView
            style="@style/TimeTable.Text"
            android:id="@+id/tt_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TimeTable.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timetable_tickets_title" />

        <TextView
            style="@style/TimeTable.Text"
            android:id="@+id/tt_tickets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

    </LinearLayout>

</LinearLayout>